--- a/src/sass/util/variables.scss
+++ b/src/sass/util/variables.scss
@@ -2,13 +2,15 @@ $primary-color: #FF360E;
 $dark-primary-color: #B3260A;
 $accent-color: #88C100;
 $dark-accent-color: #4B6B00;
-$hover-color: #EFF;
+$divider-color: #E0E0E0;
 
-$light-text-color: #FFF;
+$lightest-text-color: #FFF;
+$light-text-color: #B0B0B0;
 
 $title-font-size: 3rem;
 $large-font-size: 1.5rem;
 $medium-font-size: 1rem;
+$small-font-size: 0.85rem;
 
 $light-font-weight: 100;
 $bold-font-weight: 600;
