--- a/src/sass/home/banner.scss
+++ b/src/sass/home/banner.scss
@@ -14,7 +14,7 @@
     top: 85%;
     transform: translate(-50%, -50%);
     text-transform: uppercase;
-    color: $light-text-color;
+    color: $lightest-text-color;
     h1 {
       font-weight: $bold-font-weight;
       font-size: $title-font-size;
