--- a/src/sass/login/login.scss
+++ b/src/sass/login/login.scss
@@ -8,7 +8,7 @@ $button-margin: 5px;
   margin: $button-margin;
   background-color: $accent-color;
   border: thin solid $dark-accent-color;
-  color: $light-text-color;
+  color: $lightest-text-color;
   padding: $button-padding;
   text-decoration: none;
   text-shadow: 0;
