--- a/src/sass/util/font.scss
+++ b/src/sass/util/font.scss
@@ -14,6 +14,13 @@
 
 @font-face {
   font-family: Raleway;
+  src: url('../font/Raleway-Italic.ttf') format('truetype');
+  font-weight: normal;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: Raleway;
   src: url('../font/Raleway-Bold.ttf') format('truetype');
   font-weight: bold;
   font-style: normal;
