--- a/src/sass/util/variables.scss
+++ b/src/sass/util/variables.scss
@@ -1,5 +1,5 @@
-$primary-color: #FF360E;
-$dark-primary-color: #B3260A;
+$primary-color: #FA023C;
+$dark-primary-color: #d70234;
 $accent-color: #88C100;
 $dark-accent-color: #4B6B00;
 $divider-color: #E0E0E0;
