--- a/src/sass/util/font.scss
+++ b/src/sass/util/font.scss
@@ -1,27 +1,27 @@
 @font-face {
   font-family: Raleway;
-  src: url('../font/Raleway-Thin.ttf') format('truetype');
+  src: url('../font/Raleway/Raleway-Thin.ttf') format('truetype');
   font-weight: 100;
   font-style: normal;
 }
 
 @font-face {
   font-family: Raleway;
-  src: url('../font/Raleway-Regular.ttf') format('truetype');
+  src: url('../font/Raleway/Raleway-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: Raleway;
-  src: url('../font/Raleway-Italic.ttf') format('truetype');
+  src: url('../font/Raleway/Raleway-Italic.ttf') format('truetype');
   font-weight: normal;
   font-style: italic;
 }
 
 @font-face {
   font-family: Raleway;
-  src: url('../font/Raleway-Bold.ttf') format('truetype');
+  src: url('../font/Raleway/Raleway-Bold.ttf') format('truetype');
   font-weight: bold;
   font-style: normal;
 }
