--- a/src/sass/util/font.scss
+++ b/src/sass/util/font.scss
@@ -25,3 +25,10 @@
   font-weight: bold;
   font-style: normal;
 }
+
+@font-face {
+  font-family: FontAwesome;
+  src: url('../font/FontAwesome/fontawesome-webfont.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
