Add custom font colour

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -10,7 +10,9 @@
 }
 
 body {
-  font-family: Raleway, "Open Sanc", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: Raleway, "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: $dark-text-color;
+
   * {
     font-size: $medium-font-size;
   }
