--- a/src/sass/util/variables.scss
+++ b/src/sass/util/variables.scss
@@ -3,6 +3,8 @@ $dark-primary-color: #d70234;
 $accent-color: #88C100;
 $dark-accent-color: #4B6B00;
 $divider-color: #E0E0E0;
+$dark-background-color: #666666;
+$dark-text-color: #2E2E2E;
 
 $lightest-text-color: #FFF;
 $light-text-color: #B0B0B0;
@@ -13,4 +15,5 @@ $medium-font-size: 1rem;
 $small-font-size: 0.85rem;
 
 $light-font-weight: 100;
+$normal-font-weight: 400;
 $bold-font-weight: 600;
