--- a/src/sass/util/spacing.scss
+++ b/src/sass/util/spacing.scss
@@ -1,14 +1,19 @@
 @mixin margin-responsive() {
-  @media only screen and (min-width : 480px) {
+  margin: 0;
+
+  @media only screen and (min-width: 480px) {
+    margin: 0 5%;
+  }
+
+  @media only screen and (min-width: 768px) {
     margin: 0 10%;
   }
 
-  @media only screen and (min-width : 768px) {
+  @media only screen and (min-width: 992px) {
     margin: 0 15%;
   }
 
-  @media only screen and (min-width : 992px) {
+  @media only screen and (min-width: 1200px) {
     margin: 0 20%;
-
   }
 }
