Change nav class depending on isClear prop

--- a/src/sass/navigation/nav.scss
+++ b/src/sass/navigation/nav.scss
@@ -30,3 +30,11 @@ $item-margin: 0 2px;
     }
   }
 }
+
+.nav.clear {
+  background: transparent;
+}
+
+.nav.opaque {
+  background: $dark-background-color;
+}
